# brandes-exchange

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  config.py  core.py
api/: main.py
docs/: architecture.md  tools.md
engine/include/: order_book.hpp
memory/: __init__.py  episodic.py  long_term.py  short_term.py
tests/: test_agent.py
tools/: __init__.py  base.py  blockchain.py  exchange.py  math.py  memory.py  risk.py  web.py
